GMM_Main/src/objects/Action_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Program_Code__c</fullName>
        <formula>NOFA_ID__r.Corporate_Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Due_Date__c</fullName>
        <label>Extended Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_ID__c</fullName>
        <label>NOFO ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Action Reports</relationshipLabel>
        <relationshipName>Action_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA_ID__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Activity__c</fullName>
        <label>Report/Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Administration/New User  Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost-share Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Inventory Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGP/FGPF PRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Management Decision Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant/Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant 3-Year/Closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorandum of Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC National Service Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review/Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Visit Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMD Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Report Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPVA Demographic Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Report Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Report Lite Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Report Lite Semiannual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSVP PRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP/SCPF PRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subgrantee Certification Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unused or Residual Supplies Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISTA PRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_End_Date__c</fullName>
        <label>Reporting Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Start_Date__c</fullName>
        <label>Reporting Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Reports</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Action Reports ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Action_Reports_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( NOFA_ID__r.Status__c , &apos;Review in Progress&apos;),NOT( ISNEW()))</errorConditionFormula>
        <errorMessage>Action Reports is not Editable if Nofa is in &apos;Review in Progress&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_to_Reporting_Period_End</fullName>
        <active>true</active>
        <description>Due Date - This will be a date field that must be greater than &quot;Reporting Period End Date&quot; date.</description>
        <errorConditionFormula>Due_Date__c  &lt;  Reporting_Period_End_Date__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date  must be greater than &quot;Reporting Period End Date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_must_be_great_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Reporting_Period_End_Date__c  &lt; Reporting_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Reporting_Period_End_Date__c</errorDisplayField>
        <errorMessage>Report Period Ending Date must be greater than &quot;Reporting Period Start Date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extended_due_date_greater_than_due_date</fullName>
        <active>true</active>
        <errorConditionFormula>Extended_Due_Date__c  &lt; Due_Date__c</errorConditionFormula>
        <errorDisplayField>Extended_Due_Date__c</errorDisplayField>
        <errorMessage>Extended Due Date must be greater than &quot;Due Date&quot;</errorMessage>
    </validationRules>
</CustomObject>